5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1577_1327.log
== SUBMITION (2019-03-14 19:05:04) 
-- CODE:
print(90-55=35)
-- EXECUTION TIME:
0.140434
-- ERROR:
  File "/home/codebench/codes/1577/1327/main.py", line 1
    print(90-55=35)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:19) 
-- CODE:
print(35)
-- EXECUTION TIME:
0.149272
-- TEST CASE 1:
---- input:
xxx
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
